# alpha-trader

./: .gitignore  AGENTS.md  Dockerfile  README.md  WORK_INTAKE.md  app.py  codex_instructions.md  config.py  docker-compose.yml  formatting.py  installed_skills.md  main.py  moomoo-install.md  moomoo_helpers.py  pyproject.toml  requirements.txt
.codex/: config.toml  history.jsonl  logs_1.sqlite-shm  logs_1.sqlite-wal  state_5.sqlite-shm  state_5.sqlite-wal  version.json
.codex/prompts/: speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.tasks.md
.github/: copilot-instructions.md
.github/skills/alpha-review/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
MMAPI4Python_10.4.6408/: README.md  setup.py
MMAPI4Python_10.4.6408/moomoo/: VERSION.txt  __init__.py
MMAPI4Python_10.4.6408/moomoo/common/: constant.py  ft_logger.py  utils.py  (+2 more)
alpha_trader/: __init__.py  config.py  moomoo_helpers.py  quote_helpers.py
backend/: .env.example
docs/: Agents.md  Claude.md  PROMPT.md  PROMPT_Agent1.md  PROMPT_Agent2.md  PROMPT_Automation.md  PROMPT_Trade_v1.md  PROMPT_v3.docx  Trader.md  Watchlist.csv
frontend/: .env.example.local  package.json
myapp/: autogen04202.db
prompts/: clarify.md  plan.md  specify.md
rag/backend/: README.md  requirements.txt
rag/data/: watchlist.csv
rag/frontend/: .env.local.example  README.md  package.json
rag/scripts/: ingest_example.py
specs/001-market-sentiment-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+126 files in other folders)
