[project]
name = "alpha-trader"
version = "0.1.0"
description = "Smart investing and trading with AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.10",
    "langchain>=1.3.9",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.5",
    "moomoo-api>=10.4.6408",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.14",
]
